--- a/package.json
+++ b/package.json
@@ -24,13 +24,14 @@
   "homepage": "https://github.com/a-ruskomaa/fullstackopen2020_t3#readme",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.10.15",
     "mongoose-unique-validator": "^2.0.3",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.6",
-    "dotenv": "^8.2.0"
+    "eslint": "^7.14.0",
+    "nodemon": "^2.0.6"
   }
 }
